backstage.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backstage
  namespace: backstage
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backstage
  template:
    metadata:
      labels:
        app: backstage
    spec:
      containers:
      - name: backstage
        image: ducthanh1989/backstage:v2605
        imagePullPolicy: IfNotPresent
        ports:
          - name: http
            containerPort: 7007
