backstage-server-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: backstage-backend
  namespace: backstage
spec:
  type: NodePort
  selector:
    app: backstage
  ports:
    - name: http
      port: 80
      targetPort: http
